[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioleviton"
version = "0.2.3"
description = "Async Python client for the Leviton My Leviton cloud API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "gtxaspec"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/gtxaspec/aioleviton"
Repository = "https://github.com/gtxaspec/aioleviton"
Issues = "https://github.com/gtxaspec/aioleviton/issues"

[tool.setuptools.packages.find]
include = ["aioleviton*"]

[tool.setuptools.package-data]
aioleviton = ["py.typed"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]
