[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioleviton"
version = "0.3.1"
description = "Async Python client for the Leviton My Leviton cloud API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "gtxaspec"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aioresponses>=0.7.6",
]
dev = [
    "aioleviton[test]",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/gtxaspec/aioleviton"
Repository = "https://github.com/gtxaspec/aioleviton"
Issues = "https://github.com/gtxaspec/aioleviton/issues"

[tool.setuptools.packages.find]
include = ["aioleviton*"]

[tool.setuptools.package-data]
aioleviton = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["aioleviton"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"aioleviton/__init__.py" = ["E402"]
